Remove kittens from project
The kittens route, component, html and directory have been removed.

 Addresses issue #1

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,3 +1,7 @@
+<!-- Default page that Angular loads into
+     The component to load is defined within the bootstrap array of the
+     root module.
+-->
 <html>
 <head>
     <base href="/">
